dataset1235/2025-2/1955397009/users/1607202972/executions/1107611404_704983377.log
== RUN (2025-08-19 12:47:56)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:41:58)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print("O valor do quociente da divisão inteira é:", Q1)
print("O valor do resto da divisão é:", R)
print("O valor do quociente da divisão real é:", Q2)
print("O valor do produto de x vezes y é:", Pr)
print("O valor do y elevado a terceira potencia é:", Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
O valor do y elevado a terceira potencia é: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
O valor do y elevado a terceira potencia é: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
O valor do y elevado a terceira potencia é: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 12:48:06)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:38:47)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print("O valor do quociente da divisão inteira é:"Q1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 8
    print("O valor do quociente da divisão inteira é:"Q1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:39:00)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print("O valor do quociente da divisão inteira é:", Q1)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 7
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 1
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 2
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 26
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 173
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Digite um valor para o dividendo:Digite um valor para o divisor:O valor do quociente da divisão inteira é: 173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 12:44:11)
-- CODE: 
x=int(input("Digite um valor para o dividendo:"))
y=int(input("Digite um valor para o divisor:"))
Q1=x//y
R=x%y
Q2=x/y
Pr=x*y
Pot=y**3
print("O valor do quociente da divisão inteira é:", Q1)
print("O valor do resto da divisão é:", R)
print("O valor do quociente da divisão real é:", Q2)
print("O valor do produto de x vezes y é:", Pr)
print("O valor do y elevado a terceira potencia é:", Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
O valor do y elevado a terceira potencia é: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
O valor do y elevado a terceira potencia é: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
O valor do y elevado a terceira potencia é: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
